src/main/webapp/css/srp_style.css
.srp-container {
  display: flex;
}

.srp {
  flex-grow: 1;
}

.card-container {
  margin: 20px 30px 0px 30px;
}

.card {
  margin-bottom: 20px;
  padding: 24px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
  transition: box-shadow .25s;
  border-radius: 2px;
  width: 400px;
}

.card .card-title {
  font: 300 20px Roboto, Arial, sans-serif;
}

.card .card-description {
  font: bold 16px Roboto, Arial, sans-serif;
  margin-top: 20px;
}

.card code {
  margin-top: 10px;
  margin-bottom: 10px;
  display: block;
}

.card p {
  margin-top: 0;
  display: block;
}

